Fixed issue with all day events not working and added horizontal scroll

--- a/css/cardStyle.css
+++ b/css/cardStyle.css
@@ -2,17 +2,18 @@
   /* ---------------------------------------------Calendar Cards------------------------------------------------- */
   /* ============================================================================================================ */
   
-  .container {
-    padding: 20px 63px 20px 65px;
+  #EventCards {
+    overflow: auto;
+    min-height: 375px;
+    overflow-y: hidden;
+    display: flex;
+    justify-content: center;
   }
   .card {
     overflow: hidden;
-    width: 90%;
-    height: 50vw;
-    margin: 1%;
-    float: left;
-    display: block;
-    max-width: 375px;
+    display: inline;
+    margin: 1em;
+    max-width: 320px;
     max-height: 300px;
     min-width: 300px;
     min-height: 300px;
@@ -45,7 +46,7 @@
     display: block;
     width: 100%;
     height: 1px;
-    background-color: #000;
+    background-color: #9d9d9d;
     margin: 20px 0;
   }
   .text--description {
@@ -71,4 +72,10 @@
   }
   .map_canvas:hover {
     top: 0%;
+  }
+
+  .addEvent-btn{
+    color: black;
+    float: right;
+    padding-left: 0.5em;
   }
